# tx-script

./: Cargo.toml  README.md  send-payments.tx
.github/workflows/: release.yml
src/: main.rs
src/backend/: mod.rs  prepared_transaction.rs  tx_builder.rs
src/backend/dispatcher/: browser_dispatcher.rs  local_dispatcher.rs  mod.rs  tx_dispatcher.rs
src/cli/: mod.rs
src/common/: chain.rs  mod.rs  scanner.rs  signer.rs  token.rs  unit.rs
src/frontend/: grammar.pest  parser.rs
src/repl/: mod.rs
txsup/: install.sh  txsup.sh
