[package]
name = "tx-script"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
pest = "2.7.10"
pest_derive = "2.6"
futures = "0.3.30"
clap = { version = "4.5.7", features = ["derive"] }
# TODO: pick only the used features
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
